--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
+    <h1>Рыкова Екатерина Дмитриевна - Лабораторная работа №8</h1>
     <script src="1.js"></script>
+    <script src="2.js"></script>
 </body>
 
 </html>
