--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Рыкова Екатерина Дмитриевна - Лабораторная работа №8</h1>
     <script src="1.js"></script>
     <script src="2.js"></script>
+    <script src="3.js"></script>
 </body>
 
 </html>
