--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="2.js"></script>
     <script src="3.js"></script>
     <script src="4.js"></script>
+    <script src="5.js"></script>
 </body>
 
 </html>
